	character vector, but will give numeric output with new
	arguent 'numeric = TRUE'.

    o	New function readRegistry() to read registry hives.

    o	Saving a graphics window containing semi-transparent colours
	to BMP, JPEG or PNG now works.

    o	The bmp(), jpeg() and png() devices support semi-transparent
	colours.  See ?png for use with transparent backgrounds.


BUILDING R

    o	Support for the ACML BLAS has been withdrawn (there is no
	version of ACML 4.0.0 for gcc under Windows, and none at all
	for gfortran).

    o	We now presume version 2.7.0 of Rtools.exe, in which gcc is
	version 4.2.1.

    o	We now assume Tcl/Tk version 8.5.x (included in version 2.7.0
	of Rtools.exe).  Earlier versions can be selected in MkRules.
	The distribution will include the BWidget and Tktable extensions.


BUG FIXES

    o	If a windows(rescale="fit") device was shrunk initially to fit
	on screen, the font size was not rescaled to take account of
	the initial shrink factor.



	**************************************************
	*						 *
	*	       2.6 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.6.2 patched

INSTALLER

    o	The installer now uses version-specific identifiers so that
	multiple versions of R can be installed and uninstalled
	separately. (PR#10746)



		CHANGES IN R VERSION 2.6.2

WORKAROUNDS

    o	We set some environment variables to work around hangs in Rgui
	when packages (e.g. tseries) use Fortran WRITE calls.  The
	Fortran output will be written to a file named 'fort.6' in the
	working directory.

    o	Browsing for a directory in choose.dir() and the Rgui
	'Change Dir...' menu item now works around Vista's confusion
	about 'desktop' by starting at 'Computer' on Vista/Server 2008.

    o	The shortcuts created by the installer now start R in the user's
	personal folder (typically 'My Documents' or 'Documents').


NEW FEATUES

    o	win.version() and Sys.info() know about recent and upcoming