@@ -154,7 +154,8 @@ point gstrsize(drawing d, font f, const char *s);
 int   gstrwidth(drawing d ,font f, const char *s);
 void  gcharmetric(drawing d, font f, int c, int *ascent, int *descent,
 		  int *width);
-font  gnewfont(drawing d, const char *face, int style, int size, double rot);
+font  gnewfont(drawing d, const char *face, int style, int size, 
+	       double rot, int usePoints);
 int   ghasfixedwidth(font f);
 field newfield_no_border(const char *text, rect r);
 
