@@ -35,7 +35,7 @@ png(filename = "Rplot\%03d.png", width = 480, height = 480,
     given.  Can be \code{px} (pixels, the default), \code{in} (inches),
     \code{cm} or \code{mm}.}
   \item{pointsize}{the default pointsize of plotted text, interpreted as
-    points at the current screen resolution.}
+    big points (1/72 inch) at \code{res} dpi.}
   \item{bg}{the initial background colour: can be overridden by setting
     par("bg").}
   \item{quality}{the \sQuote{quality} of the JPEG image, as a
@@ -43,7 +43,8 @@ png(filename = "Rplot\%03d.png", width = 480, height = 480,
     degradation of the image.}
   \item{res}{The nominal resolution in dpi which will be recorded in the
     bitmap file, if a positive integer.  Also used for units other than
-    the default.}
+    the default.  If not specified, taken as 72 dpi to set the size of
+    text and line widths.}
   \item{restoreConsole}{See the \sQuote{Details} section of
     \code{\link{windows}}.}
 }
@@ -65,9 +66,8 @@ png(filename = "Rplot\%03d.png", width = 480, height = 480,
   resolutions in PNG files are recorded in pixels/metre, the reported
   dpi value will be changed slightly.
 
-  For graphics parameters that make use of dimensions in inches
-  (including font sizes in points), the (reported) screen resolution is
-  used.
+  For graphics parameters that make use of dimensions in inches,
+  \code{res} dpi (default 72) is assumed.
   
   Both \code{bmp} and \code{png} will use a palette if there are less
   than 256 colours on the page, and record a 24-bit RGB file otherwise.
@@ -75,13 +75,12 @@ png(filename = "Rplot\%03d.png", width = 480, height = 480,
   \code{png} supports transparent backgrounds on 16-bit (\sQuote{High
     Color}) or better screens: use \code{bg = "transparent"}.  There is
   also support for semi-transparent colours of lines, fills and text.
-  However, the format of PNG used allows only one non-opaque colour, so if
-  there is a transparent background, semi-transparent colours are
-  painted onto a slightly off-white background and hence the pixels are
-  opague.
+  However, as there is only partial support for transparency in the
+  graphics toolkit used, if there is a transparent background
+  semi-transparent colours are painted onto a slightly off-white
+  background and hence the pixels are opague.
 
-  Not all PNG viewers render files with transparency correctly: those
-  that do not are likely to show an off-white background.
+  Not all PNG viewers render files with transparency correctly.
 }
 
 \value{
@@ -119,10 +118,10 @@ png(filename = "Rplot\%03d.png", width = 480, height = 480,
 
   \itemize{
     \item The default device size is in pixels.
-    \item Font sizes are in big points interpreted at screen resolution.
+    \item Font sizes are in big points interpreted at \code{res} dpi.
     \item The default font family is Arial.
-    \item Line widths are as a multiple of 1/96 inch (interpreted at
-    72dpi), with a minimum of one pixel. 
+    \item Line widths are a multiple of 1/96 inch (interpreted at
+    \code{res} dpi), with a minimum of one pixel. 
     \item The minimum radius of a circle is 1 pixel.
     \item Colours are interpreted by the viewing application.
   }
